--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "5.0.3",
+    "com.unity.2d.animation": "5.0.4",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.0.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.1.0",
+    "com.unity.2d.spriteshape": "5.1.1",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#master",
     "com.unity.cinemachine": "2.6.3",
@@ -12,6 +12,7 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "10.2.2",
     "com.unity.test-framework": "1.1.19",
     "com.unity.textmeshpro": "3.0.1",
